fix: align overlay styles with Lumo items

--- a/packages/vaadin-lumo-styles/src/components/breadcrumbs-item.css
+++ b/packages/vaadin-lumo-styles/src/components/breadcrumbs-item.css
@@ -39,8 +39,7 @@
     }
 
     :host([slot='overlay']) [part='link']:hover {
-      background-color: var(--lumo-contrast-5pct);
-      color: var(--lumo-primary-text-color);
+      background-color: var(--lumo-primary-color-10pct);
     }
   }
 
